--- a/wrk-HTML/servicos.html
+++ b/wrk-HTML/servicos.html
@@ -80,7 +80,7 @@
 
 
 
-        <div class="site-section mt-5 inner-page-cover overlay" data-aos="fade" data-stellar-background-ratio="0.5">
+        <div class="site-section mt-3 inner-page-cover overlay" data-aos="fade" data-stellar-background-ratio="0.5">
             <div class="container">
                 <div class="row align-items-center justify-content-center text-center">
 
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <div class="site-section">
+        <div class="p-1">
             <div class="container">
                 <div class="mb-5">
                     <h3>Diaristas em São Paulo:</h3>
@@ -244,7 +244,7 @@
 
                         </div>
 
-                        <div class="col-12 mt-5 text-center">
+                        <div class="col-12 my-5 text-center">
                             <div class="custom-pagination">
                                 <span>1</span>
                                 <a href="#">2</a>
