--- a/wrk-HTML/servicos.html
+++ b/wrk-HTML/servicos.html
@@ -38,7 +38,7 @@
             <div class="site-mobile-menu-body"></div>
         </div>
 
-        <header class="site-navbar container py-0 bg-white" role="banner">
+        <header class="site-navbar container py-0 bg-white shadow-sm" role="banner">
 
             <!-- <div class="container"> -->
             <div class="row align-items-center">
