nova pagina sobre e melhorigas gerais.

--- a/wrk-HTML/servicos.html
+++ b/wrk-HTML/servicos.html
@@ -119,7 +119,7 @@
                                         <a href="#" class="bookmark" data-toggle="tooltip" data-placement="left"
                                             title="Bookmark"><span class="icon-heart"></span></a>
                                         <h2 class="mb-1"><a href="#">Diarista Um</a></h2>
-                                        <span class="address">32 anos. São Paulo, SP</span>
+                                        <span class="address">32 anos. Zona Norte, SP</span>
                                         <p class="mb-0">
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-warning"></span>
@@ -127,7 +127,7 @@
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-secondary"></span>
                                         </p>
-                                        <p class="review text-white">(2 Avaliações)</p>
+                                        <p class="review text-white">(134 Avaliações)</p>
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +141,7 @@
                                         <a href="#" class="bookmark" data-toggle="tooltip" data-placement="left"
                                             title="Bookmark"><span class="icon-heart"></span></a>
                                         <h2 class="mb-1"><a href="#">Diarista Dois</a></h2>
-                                        <span class="address">24 anos. São Paulo, SP</span>
+                                        <span class="address">24 anos. Zona Sul, SP</span>
                                         <p class="mb-0">
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-warning"></span>
@@ -149,7 +149,7 @@
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-warning"></span>
                                         </p>
-                                        <p class="review text-white">(5 Avaliações)</p>
+                                        <p class="review text-white">(122 Avaliações)</p>
                                     </div>
                                 </div>
                             </div>
@@ -163,7 +163,7 @@
                                         <a href="#" class="bookmark" data-toggle="tooltip" data-placement="left"
                                             title="Bookmark"><span class="icon-heart"></span></a>
                                         <h2 class="mb-1"><a href="#">Diarista Três</a></h2>
-                                        <span class="address">29 anos. Salvador, BA</span>
+                                        <span class="address">29 anos. Zona Leste, SP.</span>
                                         <p class="mb-0">
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-warning"></span>
@@ -171,7 +171,7 @@
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-warning"></span>
                                         </p>
-                                        <p class="review text-white">(5 Avaliações)</p>
+                                        <p class="review text-white">(188 Avaliações)</p>
                                     </div>
                                 </div>
                             </div>
@@ -185,7 +185,7 @@
                                         <a href="#" class="bookmark" data-toggle="tooltip" data-placement="left"
                                             title="Bookmark"><span class="icon-heart"></span></a>
                                         <h2 class="mb-1"><a href="#">Diarista Quatro</a></h2>
-                                        <span class="address">27 anos. Rio de Janeiro, RJ</span>
+                                        <span class="address">27 anos. Zona Leste, SP</span>
                                         <p class="mb-0">
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-warning"></span>
@@ -193,7 +193,7 @@
                                             <span class="icon-star text-secondary"></span>
                                             <span class="icon-star text-secondary"></span>
                                         </p>
-                                        <p class="review text-white">(15 Avaliações)</p>
+                                        <p class="review text-white">(84 Avaliações)</p>
                                     </div>
                                 </div>
                             </div>
@@ -207,7 +207,7 @@
                                         <a href="#" class="bookmark" data-toggle="tooltip" data-placement="left"
                                             title="Bookmark"><span class="icon-heart"></span></a>
                                         <h2 class="mb-1"><a href="#">Diarista Cinco</a></h2>
-                                        <span class="address">33 anos. São Paulo, SP</span>
+                                        <span class="address">33 anos. Zona Norte, SP</span>
                                         <p class="mb-0">
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-warning"></span>
@@ -215,7 +215,7 @@
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-secondary"></span>
                                         </p>
-                                        <p class="review text-white">(1 Avaliações)</p>
+                                        <p class="review text-white">(231 Avaliações)</p>
                                     </div>
                                 </div>
                             </div>
@@ -229,7 +229,7 @@
                                         <a href="#" class="bookmark" data-toggle="tooltip" data-placement="left"
                                             title="Bookmark"><span class="icon-heart"></span></a>
                                         <h2 class="mb-1"><a href="#">Diarista Seis</a></h2>
-                                        <span class="address">20 anos. São Paulo, SP</span>
+                                        <span class="address">20 anos. Centro, SP</span>
                                         <p class="mb-0">
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-warning"></span>
@@ -237,7 +237,7 @@
                                             <span class="icon-star text-warning"></span>
                                             <span class="icon-star text-secondary"></span>
                                         </p>
-                                        <p class="review text-white">(10 Avaliações)</p>
+                                        <p class="review text-white">(86 Avaliações)</p>
                                     </div>
                                 </div>
                             </div>
@@ -333,17 +333,13 @@
                     <div class="col-md-12">
                         <div class="border-top pt-5">
                             <p>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                                template
-                                is made with <i class="icon-heart" aria-hidden="true"></i> by <a
-                                    href="https://colorlib.com" target="_blank">Colorlib</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
+                                <script>
+                                  document.write(new Date().getFullYear());
+                                </script> All rights reserved | </a>
+                              </p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </footer>
