--- a/wrk-HTML/contact.html
+++ b/wrk-HTML/contact.html
@@ -52,10 +52,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li class="active"><a href="contact.html">Contato</a></li>
 
                 <li class="ml-xl-3 login"><a href="login.html"><span class="border-left pl-xl-4"></span>Entrar</a></li>
-                <li class="active"><a href="register.html">Registrar</a></li>
+                <li><a href="register.html">Registrar</a></li>
 
                 <li><a href="#" class="cta"><span class="bg-primary text-white rounded">+ Oferecer Serviço</span></a></li>
               </ul>
