novas alterações do conteúdo das páginas.

--- a/wrk-HTML/servico-detalhes.html
+++ b/wrk-HTML/servico-detalhes.html
@@ -54,7 +54,7 @@
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="servicos.html">Serviços</a></li>
               <li><a href="sobre.html">Sobre</a></li>
-              <li><a href="contact.html">Contato</a></li>
+               
 
               <li class="ml-xl-3 login"><span class="border-left pl-xl-4"></span>Bem-vindo, Prestador :)</a></li>
 
@@ -105,11 +105,9 @@
             <div class="row mt-3 mr-5">
               <div>
                 <h5>Mais informações sobre o serviço:</h5>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto laborum veritatis, eveniet distinctio
-                  sit asperiores vel voluptatum! Ex vero a, nam, repellendus libero enim iure illum, debitis maxime
-                  architecto odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto officia qui odit
-                  fuga! Officiis est commodi molestias nihil fugiat totam atque, voluptates autem? Deserunt doloribus
-                  mollitia vel, eum veritatis illum.</p>
+                <p>Gostaria de pintar a sala da minha casa. A atual pintura é bem antiga, está amarela e com algumas rachaduras. Minha sala tem por volta de 25 m². 
+                  Estou pensando em pintar de cinza claro 3 paredes e cinza chumbo 1 parede.
+                </p>
               </div>
             </div>
             <div class="row">
